added animatoin control to python

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import numpy as np\n",
     "import json\n",
-    "from cad_viewer_widget import CadViewer\n",
+    "from cad_viewer_widget import CadViewer, AnimationTrack\n",
     "from sidecar import Sidecar\n",
     "\n",
     "names = [\"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"hexapod\", \"hexapod_m\", \"vertices\"]\n",
@@ -35,8 +35,8 @@
     "\n",
     "with sc:\n",
     "    cv = CadViewer(\n",
-    "        cad_width=800, \n",
-    "        height=600, \n",
+    "        cad_width=640, \n",
+    "        height=400, \n",
     "        tree_width=250, \n",
     "        theme=\"light\", \n",
     "        tools=True\n",
@@ -61,17 +61,18 @@
     "    axes=True,\n",
     "    axes0=False,\n",
     "    grid=[True, False, False], \n",
-    "    transparent=True,\n",
+    "    transparent=False,\n",
     "    black_edges=False,\n",
     "    edge_color=\"#707070\",\n",
     "    ambient_intensity=0.5,\n",
     "    direct_intensity=0.3,\n",
-    "    reset_camera=False,\n",
+    "    reset_camera=True,\n",
     "#    reset_camera=True,\n",
     "#    position=(-523.1876106053778, 220.0057378967463, 786.3865378864517),\n",
     "#    quaternion=(-0.3113879332023978, 0.011019379723961274, 0.8909337230080648, 0.33038345832295263),\n",
     "#    zoom=0.5,\n",
-    "    timeit=False,\n",
+    "#    timeit=True,\n",
+    "#    animation_loop=False\n",
     ")"
    ]
   },
@@ -86,11 +87,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90bc1d1d-7e2a-459a-a219-55a0e52a6f8b",
+   "id": "36a92dbe-45b1-4a61-a7f5-8380da2dc227",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.states"
+    "cv.widget.tracks"
    ]
   },
   {
@@ -540,6 +541,100 @@
    "outputs": [],
    "source": [
     "get_state(state)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65521ed7-512d-40d7-b4b0-0803604adf04",
+   "metadata": {},
+   "source": [
+    "# Animation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "176fb700-592d-4bd5-adfb-0728e5dde472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "horizontal_angle = 25\n",
+    "\n",
+    "leg_names = {\n",
+    "    \"right_back\", \"right_middle\", \"right_front\", \n",
+    "    \"left_back\",  \"left_middle\", \"left_front\",\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "def intervals(count):\n",
+    "    r = [ min(180, (90 + i*(360 // count)) % 360) for i in range(count)]\n",
+    "    return r \n",
+    "\n",
+    "def times(end, count):\n",
+    "    return np.linspace(0, end, count+1).tolist()\n",
+    "    \n",
+    "def vertical(count, end, offset, reverse):\n",
+    "    ints = intervals(count)\n",
+    "    heights = [round(35 * np.sin(np.deg2rad(x)) - 15, 1) for x in ints]\n",
+    "    heights.append(heights[0])\n",
+    "    return times(end, count), heights[offset:] + heights[1:offset+1]\n",
+    "\n",
+    "def horizontal(end, reverse):\n",
+    "    factor = 1 if reverse else -1\n",
+    "    return times(end, 4), [0, factor * horizontal_angle, 0, -factor * horizontal_angle, 0]\n",
+    "\n",
+    "leg_group = (\"left_front\", \"right_middle\", \"left_back\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3bd1c42-e2d8-46a5-ae2e-3701f326fa3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks = []\n",
+    "\n",
+    "for name in leg_names:\n",
+    "    # move upper leg\n",
+    "    cv.add_track(AnimationTrack(f\"/bottom/{name}\", \"rz\", *horizontal(4, \"middle\" in name)))\n",
+    "\n",
+    "cv.animate(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4412ef36-c26f-41fc-ac4e-bacf01010b26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84324b37-905f-4f11-957a-2cf5c3134ca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name in leg_names:\n",
+    "    # move lower leg\n",
+    "    cv.add_track(AnimationTrack(f\"/bottom/{name}/lower\", \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)))\n",
+    "    \n",
+    "cv.animate(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ee5825-ec43-422d-903f-bed194c15aa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clear_tracks()"
    ]
   },
   {
