--- a/test.ipynb
+++ b/test.ipynb
@@ -67,7 +67,6 @@
     "    ambient_intensity=0.5,\n",
     "    direct_intensity=0.3,\n",
     "    reset_camera=True,\n",
-    "#    reset_camera=True,\n",
     "#    position=(-523.1876106053778, 220.0057378967463, 786.3865378864517),\n",
     "#    quaternion=(-0.3113879332023978, 0.011019379723961274, 0.8909337230080648, 0.33038345832295263),\n",
     "#    zoom=0.5,\n",
@@ -77,21 +76,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "819cff18-3c2c-467d-8d44-354b3606225e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.js_debug = True"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ceca8f0b-8b51-4748-b36a-72f358a2284a",
    "metadata": {},
    "source": [
     "# Widget comms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36a92dbe-45b1-4a61-a7f5-8380da2dc227",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.tracks"
    ]
   },
   {
@@ -127,7 +126,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p0 = cv.widget.position"
+    "p0 = cv.position\n",
+    "if cv.control == \"trackball\":\n",
+    "    q0 = cv.quaternion\n",
+    "else:\n",
+    "    q0 = None\n",
+    "p0, q0"
    ]
   },
   {
@@ -137,8 +141,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.position = [960.01,0,0]\n",
-    "cv.widget.zoom = 0.5"
+    "if cv.control == \"trackball\":\n",
+    "    cv.set_camera(\n",
+    "        [-581.2983866303276,200.51522639763488,748.4089730676135],\n",
+    "        [-0.33190544711158626,0.026748479971868442,0.9128279093702769,0.23636518540500767])\n",
+    "else:\n",
+    "    cv.set_camera([-581.2983866303276,200.51522639763488,748.4089730676135])\n",
+    "\n",
+    "cv.zoom = 0.5"
    ]
   },
   {
@@ -148,8 +158,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.position = p0\n",
-    "cv.widget.zoom = 1"
+    "if cv.control == \"trackball\":\n",
+    "    cv.set_camera(p0, q0)\n",
+    "else:\n",
+    "    cv.set_camera(p0)\n",
+    "cv.zoom = 1"
    ]
   },
   {
@@ -159,8 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.ambient_intensity = 0.9\n",
-    "cv.widget.direct_intensity = 0.5"
+    "cv.ambient_intensity = 0.9\n",
+    "cv.direct_intensity = 0.5"
    ]
   },
   {
@@ -170,8 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.ambient_intensity = 0.5\n",
-    "cv.widget.direct_intensity = 0.3"
+    "cv.ambient_intensity = 0.5\n",
+    "cv.direct_intensity = 0.3"
    ]
   },
   {
@@ -181,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ec = cv.widget.edge_color"
+    "ec = cv.edge_color"
    ]
   },
   {
@@ -191,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.edge_color = \"#ff0000\""
+    "cv.edge_color = \"#ff0000\""
    ]
   },
   {
@@ -201,21 +214,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.edge_color = ec"
+    "cv.edge_color = ec"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52bb126f-fa05-4bd9-939a-98eecc5d40db",
+   "id": "83d2fa2a-3dc9-4cc3-b7ac-628e05c18c2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.grid = [not g for g in cv.widget.grid]\n",
-    "cv.widget.axes = not cv.widget.axes\n",
-    "cv.widget.axes0 = not cv.widget.axes0\n",
-    "cv.widget.transparent = not cv.widget.transparent\n",
-    "cv.widget.black_edges = not cv.widget.black_edges"
+    "cv.grid = [not g for g in cv.widget.grid]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26e92be6-06d4-442f-8007-f2c993e97b2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.axes = not cv.axes\n",
+    "cv.axes0 = not cv.axes0\n",
+    "cv.transparent = not cv.transparent\n",
+    "cv.black_edges = not cv.black_edges"
    ]
   },
   {
@@ -225,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.tools = not cv.widget.tools"
+    "cv.tools = not cv.tools"
    ]
   },
   {
@@ -235,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.ortho = not cv.widget.ortho"
+    "cv.ortho = not cv.ortho"
    ]
   },
   {
@@ -245,9 +267,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.zoom_speed = 5\n",
-    "cv.widget.pan_speed = 5\n",
-    "cv.widget.rotate_speed = 5"
+    "cv.zoom_speed = 5\n",
+    "cv.pan_speed = 5\n",
+    "cv.rotate_speed = 5"
    ]
   },
   {
@@ -257,9 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.zoom_speed = 1\n",
-    "cv.widget.pan_speed = 1\n",
-    "cv.widget.rotate_speed = 1"
+    "cv.zoom_speed =1\n",
+    "cv.pan_speed =1\n",
+    "cv.rotate_speed =1"
    ]
   },
   {
@@ -269,278 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.lastPick"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7277245-5b15-41f7-8bd2-785aa359d023",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.rotate_x(30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20da23c4-1f75-458f-9be5-b2c897598929",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6089e3a-79cb-4fbd-9b4b-452c39e73701",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f0c7796-edad-4145-9843-1140c43df1b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0872c3be-8081-46ad-9e6c-46d65a90d4d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdc6c5b6-50fa-445e-914e-abd5060e6412",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f2beb6c-2528-4ee2-bc67-7a4c59e70ab5",
-   "metadata": {},
-   "source": [
-    "# Custom Messsage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f934c036-1f58-41df-8bb7-594435cc4529",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cad_viewer_widget import show_msg\n",
-    "\n",
-    "debug = show_msg()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5ddfbdc-b986-4516-93d4-66e0701e2db3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipywidgets import Output\n",
-    "\n",
-    "def action(result):\n",
-    "    value = json.loads(result)[\"result\"]\n",
-    "    with out:\n",
-    "        print(value)\n",
-    "\n",
-    "out = Output()\n",
-    "out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fab7ae8-65af-4cfc-8906-6795aa487a58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.execute(\"addShapes\", None, callback=action)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b946332-76e7-4afb-89bb-edb516d21f87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.get(\"viewer.camera.zoom\", callback=debug)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a14a6822-3da1-42d8-af4b-624cf423b3dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.execute(\"viewer.camera.position\", \"set\", (4.3, 0, 0), update=True, callback=debug)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc353456-d019-4c9e-9745-b246fd75860d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.set(\"viewer.camera.zoom\", 0.2, update=True, callback=debug)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a737420-a93e-4f3d-b34c-c465091f3c83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.get(\"viewer.camera.position\", callback=action)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbcf33bb-1282-4f30-a111-dc1c3fa935ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.get_result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1549a7b9-01b7-4984-bbe3-a94334f256f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.get(\"viewer.scene.children[0].children[0].children[1]\", callback=action)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34ff5cc4-6ab8-45d1-b26f-04ef33b8dd86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.execute(\"viewer\", \"setAxes\", (True), update=True, callback=action)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fe1692c-ea91-4703-9859-1e9a7afe78d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.get(\"viewer.scene.children[2]\", callback=action)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c83de9d6-b823-4677-bddf-47276c2afbf5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.zoom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dacca4a-539b-485e-ab2c-55049c6218d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.zoom = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3654e82-4367-4722-a7fa-d5812c09743d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "print(json.dumps(cv.widget.states))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d88f91a-e508-499c-9664-8d6fc78ab8d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "States = {\n",
-    "  \"unselected\": 0,\n",
-    "  \"selected\": 1,\n",
-    "  \"mixed\": 2,\n",
-    "  \"empty\": 3\n",
-    "};"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2d41e11-e043-4875-aad0-e1772ec9e3d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def set_state(shape, mesh):\n",
-    "    if shape > 15 or mesh > 15 or shape < 0 or mesh < 0:\n",
-    "        raise ValueError(\"Values need to be between 0 and 15\")\n",
-    "    return (shape << 4) + mesh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05686585-cc06-431f-9d24-31ee7b2afc1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_state(state):\n",
-    "    if state > 255 or state < 0:\n",
-    "        raise ValueError(\"Value needs to be between 0 and 255\")\n",
-    "    return (state >> 4, state & 15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd14bbc1-b4ff-421c-b43e-26ff049793a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "state = set_state(0,15)\n",
-    "state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a41425ee-443c-480d-a5b9-605694479888",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_state(state)"
+    "cv.last_pick"
    ]
   },
   {
@@ -636,6 +387,114 @@
    "source": [
     "cv.clear_tracks()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "874c1bb1-38ad-42ae-aef4-c1f62888d7c9",
+   "metadata": {},
+   "source": [
+    "# Clipping handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ca1f312-491c-44c8-a21c-45913e4784d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.select_clipping()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db5ad755-39c3-42f8-a130-5d9528f7613f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clip_intersection = not cv.clip_intersection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49a5e5ea-b0b9-4876-9620-b574cfe5d7a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clip_planes = not cv.clip_planes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e64fe54a-756d-4a67-931f-4bcc7c3f77ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clip_value_0 = 10\n",
+    "cv.clip_value_1 = -50\n",
+    "cv.clip_value_2 = 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ed0bf9-dcac-4b4a-bb74-0dac28fb9797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clip_normal_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02503b30-d19b-4890-ae71-b3782b15abb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clip_value_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96ca9e5-8313-4f15-a6b2-c61adf7330c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clip_normal_0 = (-0.35, -0.35, -0.35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34a375de-e4a2-4f45-aa2d-bae55e98a456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clip_normal_0 = (-1, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18ec7a77-835b-4a37-9b1d-0aed8f291770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.select_tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c3a1387-c815-47bf-8a8d-38fe4c398fcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
