added rotation handling and fixed camera handling

--- a/test.ipynb
+++ b/test.ipynb
@@ -56,7 +56,7 @@
     "    objects[name],\n",
     "    states[name],\n",
     "    ortho=True,\n",
-    "    control=\"trackball\",\n",
+    "    control=\"orbit\",\n",
     "    ticks=20,\n",
     "    axes=True,\n",
     "    axes0=False,\n",
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.js_debug = True"
+    "cv.js_debug = False"
    ]
   },
   {
@@ -137,16 +137,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bb01783-a2f8-44f5-91df-92262e9e3d64",
+   "id": "73daae57-3e17-4be3-be0f-a18f03c2135d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "cv.position = [-580.0, 200.0, 750.0]\n",
+    "\n",
     "if cv.control == \"trackball\":\n",
-    "    cv.set_camera(\n",
-    "        [-581.2983866303276,200.51522639763488,748.4089730676135],\n",
-    "        [-0.33190544711158626,0.026748479971868442,0.9128279093702769,0.23636518540500767])\n",
-    "else:\n",
-    "    cv.set_camera([-581.2983866303276,200.51522639763488,748.4089730676135])\n",
+    "    cv.quaternion = [-0.33, 0.026, 0.91, 0.24]\n",
     "\n",
     "cv.zoom = 0.5"
    ]
@@ -154,14 +152,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f35c406a-405e-41ed-9e44-1932f58cbf67",
+   "id": "864f4d05-7e5a-4242-9ee5-ed9b3f9a41ad",
    "metadata": {},
    "outputs": [],
    "source": [
+    "cv.position = p0\n",
+    "\n",
     "if cv.control == \"trackball\":\n",
-    "    cv.set_camera(p0, q0)\n",
-    "else:\n",
-    "    cv.set_camera(p0)\n",
+    "    cv.quaternion = q0\n",
+    "    \n",
     "cv.zoom = 1"
    ]
   },
@@ -501,67 +500,53 @@
    "id": "ddb9b01a-5938-4e3b-b945-240f5d09b8b3",
    "metadata": {},
    "source": [
-    "# BACKUP"
+    "# Rotations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f1d51b-ede3-45ea-9dec-4a01d36886fc",
+   "id": "a3cda18f-d084-4e52-811a-345939cea802",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
-    "def rotate_x(vector, angle):\n",
-    "    angle = rad(angle)\n",
-    "    mat = np.array(\n",
-    "        [\n",
-    "            [1, 0, 0],\n",
-    "            [0, math.cos(angle), -math.sin(angle)],\n",
-    "            [0, math.sin(angle), math.cos(angle)],\n",
-    "        ]\n",
-    "    )\n",
-    "    return tuple(np.matmul(mat, vector))\n",
-    "\n",
-    "\n",
-    "def rad(deg):\n",
-    "    return deg / 180.0 * math.pi\n",
-    "\n",
-    "\n",
-    "def rotate_y(vector, angle):\n",
-    "    angle = rad(angle)\n",
-    "    mat = np.array(\n",
-    "        [\n",
-    "            [math.cos(angle), 0, math.sin(angle)],\n",
-    "            [0, 1, 0],\n",
-    "            [-math.sin(angle), 0, math.cos(angle)],\n",
-    "        ]\n",
-    "    )\n",
-    "    return tuple(np.matmul(mat, vector))\n",
-    "\n",
-    "\n",
-    "def rotate_z(vector, angle):\n",
-    "    angle = rad(angle)\n",
-    "    mat = np.array(\n",
-    "        [\n",
-    "            [math.cos(angle), -math.sin(angle), 0],\n",
-    "            [math.sin(angle), math.cos(angle), 0],\n",
-    "            [0, 0, 1],\n",
-    "        ]\n",
-    "    )\n",
-    "    return tuple(np.matmul(mat, vector))\n",
-    "\n",
-    "\n",
-    "def rotate(vector, angle_x=0, angle_y=0, angle_z=0):\n",
-    "    v = tuple(vector)\n",
-    "    if angle_z != 0:\n",
-    "        v = rotate_z(v, angle_z)\n",
-    "    if angle_y != 0:\n",
-    "        v = rotate_y(v, angle_y)\n",
-    "    if angle_x != 0:\n",
-    "        v = rotate_x(v, angle_x)\n",
-    "    return v"
+    "cv.rotateX(30)\n",
+    "cv.rotateY(30)\n",
+    "cv.rotateZ(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f8f2a28-f30c-4e00-a550-bef49d9b2666",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.rotateZ(-30)\n",
+    "cv.rotateY(-30)\n",
+    "cv.rotateX(-30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc11d0ff-ff49-4d28-b4fd-a188b8550d03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.rotateUp(30)\n",
+    "cv.rotateLeft(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9204431d-d108-4505-938e-3f04c7b70399",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.rotateLeft(-30)\n",
+    "cv.rotateUp(-30)"
    ]
   }
  ],
