switch back to trackball contrl

--- a/test.ipynb
+++ b/test.ipynb
@@ -56,7 +56,7 @@
     "    objects[name],\n",
     "    states[name],\n",
     "    ortho=True,\n",
-    "    control=\"orbit\",\n",
+    "    control=\"trackball\",\n",
     "    ticks=20,\n",
     "    axes=True,\n",
     "    axes0=False,\n",
@@ -548,6 +548,14 @@
     "cv.rotateLeft(-30)\n",
     "cv.rotateUp(-30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9707411f-7892-4d12-84e7-408de7765d0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
