adapt to latest widget

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "300fc4db-7af9-4dca-beb0-39fe0b30d418",
+   "metadata": {},
+   "source": [
+    "# The Viewer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e54596f1-61d6-4704-90de-a405f8fe6b00",
@@ -9,10 +17,12 @@
    "source": [
     "import numpy as np\n",
     "import json\n",
+    "import time\n",
+    "import ipywidgets as widgets\n",
     "from cad_viewer_widget import CadViewer, AnimationTrack\n",
     "from sidecar import Sidecar\n",
     "\n",
-    "names = [\"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"hexapod\", \"hexapod_m\", \"vertices\"]\n",
+    "names = [\"hexapod\", \"hexapod_m\", \"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"vertices\"]\n",
     "objects = {}\n",
     "states = {}\n",
     "\n",
@@ -22,6 +32,39 @@
     "\n",
     "    with open(f\"examples/{name}-states.json\", \"r\") as fd:\n",
     "        states[name] = json.load(fd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "426a0d16-53eb-4020-adad-55efd39fb1f5",
+   "metadata": {},
+   "source": [
+    "## Open viewer in sidecar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "342a8f33-9908-4f11-b697-f4a0f7ee8578",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2 = CadViewer(\n",
+    "    cad_width=640, \n",
+    "    height=480, \n",
+    "    tree_width=250, \n",
+    "    theme=\"light\", \n",
+    "    tools=True\n",
+    ")\n",
+    "\n",
+    "cv2.add_shapes(\n",
+    "        objects[\"faces\"],\n",
+    "        states[\"faces\"],\n",
+    "        ortho=True,\n",
+    "        control=\"trackball\",\n",
+    "    animation_loop=False,\n",
+    ")\n",
+    "cv2.pan_speed = 1.5"
    ]
   },
   {
@@ -36,7 +79,7 @@
     "with sc:\n",
     "    cv = CadViewer(\n",
     "        cad_width=640, \n",
-    "        height=400, \n",
+    "        height=480, \n",
     "        tree_width=250, \n",
     "        theme=\"light\", \n",
     "        tools=True\n",
@@ -44,35 +87,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2047d07b-2653-479f-b9cc-29b3947d9496",
+   "cell_type": "markdown",
+   "id": "fe9dd08c-4a59-43d9-923a-8b93707fe67d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "name = \"hexapod\"\n",
-    "\n",
-    "cv.add_shapes(\n",
-    "    objects[name],\n",
-    "    states[name],\n",
-    "    ortho=True,\n",
-    "    control=\"trackball\",\n",
-    "    ticks=20,\n",
-    "    axes=True,\n",
-    "    axes0=False,\n",
-    "    grid=[True, False, False], \n",
-    "    transparent=False,\n",
-    "    black_edges=False,\n",
-    "    edge_color=\"#707070\",\n",
-    "    ambient_intensity=0.5,\n",
-    "    direct_intensity=0.3,\n",
-    "    reset_camera=True,\n",
-    "#    position=(-523.1876106053778, 220.0057378967463, 786.3865378864517),\n",
-    "#    quaternion=(-0.3113879332023978, 0.011019379723961274, 0.8909337230080648, 0.33038345832295263),\n",
-    "#    zoom=0.5,\n",
-    "#    timeit=True,\n",
-    "#    animation_loop=False\n",
-    ")"
+    "## Observe Javascript events"
    ]
   },
   {
@@ -82,41 +101,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.js_debug = False"
+    "cv.js_debug = True"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ceca8f0b-8b51-4748-b36a-72f358a2284a",
+   "id": "6847f42d-0bba-4b60-aa70-d1f77df57d5c",
    "metadata": {},
    "source": [
-    "# Widget comms"
+    "## Adding shapes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "032a0f61-2e70-4ab6-8f94-44495c41af2a",
+   "id": "2047d07b-2653-479f-b9cc-29b3947d9496",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.update_states({\n",
-    "    '/bottom/bottom_0': (1,0),\n",
-    "    '/bottom/top/top_0': [0,1],\n",
-    "})"
+    "def show(name):\n",
+    "    cv.add_shapes(\n",
+    "        objects[name],\n",
+    "        states[name],\n",
+    "        ortho=True,\n",
+    "        control=\"trackball\",\n",
+    "        ticks=20,\n",
+    "        axes=True,\n",
+    "        axes0=False,\n",
+    "        grid=[True, False, False], \n",
+    "        transparent=False,\n",
+    "        black_edges=False,\n",
+    "        edge_color=\"#707070\",\n",
+    "        ambient_intensity=0.5,\n",
+    "        direct_intensity=0.3,\n",
+    "        reset_camera=True,\n",
+    "    #    position=[-580.0, 200.0, 750.0],\n",
+    "    #    quaternion=[-0.33, 0.026, 0.91, 0.24],\n",
+    "    #    zoom=0.5,\n",
+    "    #    timeit=True,\n",
+    "    #    animation_loop=False\n",
+    "    )\n",
+    "\n",
+    "menu = widgets.Dropdown(\n",
+    "    options=names,\n",
+    "    value=names[0],\n",
+    "    description='Number:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "def on_change(change):\n",
+    "    if change['type'] == 'change' and change['name'] == 'value':\n",
+    "        show(change['new'])\n",
+    "\n",
+    "menu.observe(on_change)\n",
+    "\n",
+    "show(names[0])\n",
+    "menu"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5502d27e-17d3-4fb5-9fb0-5e603880c0ed",
+   "cell_type": "markdown",
+   "id": "da05a3f4-5077-46aa-8605-60f901683582",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cv.update_states({\n",
-    "    '/bottom/bottom_0': (1,1),\n",
-    "    '/bottom/top/top_0': [1,1],\n",
-    "})"
+    "# Camera position control"
    ]
   },
   {
@@ -162,6 +210,40 @@
     "    cv.quaternion = q0\n",
     "    \n",
     "cv.zoom = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceca8f0b-8b51-4748-b36a-72f358a2284a",
+   "metadata": {},
+   "source": [
+    "# Widget interaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "032a0f61-2e70-4ab6-8f94-44495c41af2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.update_states({\n",
+    "    '/bottom/bottom_0': (1,0),\n",
+    "    '/bottom/top/top_0': [0,1],\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5502d27e-17d3-4fb5-9fb0-5e603880c0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.update_states({\n",
+    "    '/bottom/bottom_0': (1,1),\n",
+    "    '/bottom/top/top_0': [1,1],\n",
+    "})"
    ]
   },
   {
@@ -295,100 +377,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65521ed7-512d-40d7-b4b0-0803604adf04",
-   "metadata": {},
-   "source": [
-    "# Animation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "176fb700-592d-4bd5-adfb-0728e5dde472",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "horizontal_angle = 25\n",
-    "\n",
-    "leg_names = {\n",
-    "    \"right_back\", \"right_middle\", \"right_front\", \n",
-    "    \"left_back\",  \"left_middle\", \"left_front\",\n",
-    "    \n",
-    "}\n",
-    "\n",
-    "def intervals(count):\n",
-    "    r = [ min(180, (90 + i*(360 // count)) % 360) for i in range(count)]\n",
-    "    return r \n",
-    "\n",
-    "def times(end, count):\n",
-    "    return np.linspace(0, end, count+1).tolist()\n",
-    "    \n",
-    "def vertical(count, end, offset, reverse):\n",
-    "    ints = intervals(count)\n",
-    "    heights = [round(35 * np.sin(np.deg2rad(x)) - 15, 1) for x in ints]\n",
-    "    heights.append(heights[0])\n",
-    "    return times(end, count), heights[offset:] + heights[1:offset+1]\n",
-    "\n",
-    "def horizontal(end, reverse):\n",
-    "    factor = 1 if reverse else -1\n",
-    "    return times(end, 4), [0, factor * horizontal_angle, 0, -factor * horizontal_angle, 0]\n",
-    "\n",
-    "leg_group = (\"left_front\", \"right_middle\", \"left_back\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3bd1c42-e2d8-46a5-ae2e-3701f326fa3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tracks = []\n",
-    "\n",
-    "for name in leg_names:\n",
-    "    # move upper leg\n",
-    "    cv.add_track(AnimationTrack(f\"/bottom/{name}\", \"rz\", *horizontal(4, \"middle\" in name)))\n",
-    "\n",
-    "cv.animate(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4412ef36-c26f-41fc-ac4e-bacf01010b26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84324b37-905f-4f11-957a-2cf5c3134ca6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for name in leg_names:\n",
-    "    # move lower leg\n",
-    "    cv.add_track(AnimationTrack(f\"/bottom/{name}/lower\", \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)))\n",
-    "    \n",
-    "cv.animate(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69ee5825-ec43-422d-903f-bed194c15aa6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.clear_tracks()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "874c1bb1-38ad-42ae-aef4-c1f62888d7c9",
    "metadata": {},
    "source": [
@@ -488,14 +476,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c3a1387-c815-47bf-8a8d-38fe4c398fcb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "ddb9b01a-5938-4e3b-b945-240f5d09b8b3",
    "metadata": {},
@@ -510,9 +490,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.rotateX(30)\n",
-    "cv.rotateY(30)\n",
-    "cv.rotateZ(30)"
+    "for i in range(10):\n",
+    "    cv.rotateX(1)\n",
+    "    cv.rotateY(3)\n",
+    "    cv.rotateZ(5)\n",
+    "    time.sleep(0.1)"
    ]
   },
   {
@@ -522,9 +504,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.rotateZ(-30)\n",
-    "cv.rotateY(-30)\n",
-    "cv.rotateX(-30)"
+    "for i in range(10):\n",
+    "    cv.rotateZ(-5)\n",
+    "    cv.rotateY(-3)\n",
+    "    cv.rotateX(-1)\n",
+    "    time.sleep(0.1)    "
    ]
   },
   {
@@ -550,12 +534,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65521ed7-512d-40d7-b4b0-0803604adf04",
+   "metadata": {},
+   "source": [
+    "# Animation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9707411f-7892-4d12-84e7-408de7765d0e",
+   "id": "176fb700-592d-4bd5-adfb-0728e5dde472",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "horizontal_angle = 25\n",
+    "\n",
+    "leg_names = {\n",
+    "    \"right_back\", \"right_middle\", \"right_front\", \n",
+    "    \"left_back\",  \"left_middle\", \"left_front\",\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "def intervals(count):\n",
+    "    r = [ min(180, (90 + i*(360 // count)) % 360) for i in range(count)]\n",
+    "    return r \n",
+    "\n",
+    "def times(end, count):\n",
+    "    return np.linspace(0, end, count+1).tolist()\n",
+    "    \n",
+    "def vertical(count, end, offset, reverse):\n",
+    "    ints = intervals(count)\n",
+    "    heights = [round(35 * np.sin(np.deg2rad(x)) - 15, 1) for x in ints]\n",
+    "    heights.append(heights[0])\n",
+    "    return times(end, count), heights[offset:] + heights[1:offset+1]\n",
+    "\n",
+    "def horizontal(end, reverse):\n",
+    "    factor = 1 if reverse else -1\n",
+    "    return times(end, 4), [0, factor * horizontal_angle, 0, -factor * horizontal_angle, 0]\n",
+    "\n",
+    "leg_group = (\"left_front\", \"right_middle\", \"left_back\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3bd1c42-e2d8-46a5-ae2e-3701f326fa3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracks = []\n",
+    "\n",
+    "for name in leg_names:\n",
+    "    # move upper leg\n",
+    "    cv.add_track(AnimationTrack(f\"/bottom/{name}\", \"rz\", *horizontal(4, \"middle\" in name)))\n",
+    "\n",
+    "cv.animate(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4412ef36-c26f-41fc-ac4e-bacf01010b26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84324b37-905f-4f11-957a-2cf5c3134ca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name in leg_names:\n",
+    "    # move lower leg\n",
+    "    cv.add_track(AnimationTrack(f\"/bottom/{name}/lower\", \"rz\", *vertical(8, 4, 0 if name in leg_group else 4, \"left\" in name)))\n",
+    "    \n",
+    "cv.animate(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ee5825-ec43-422d-903f-bed194c15aa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.clear_tracks()"
+   ]
   }
  ],
  "metadata": {
